--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Derrick's Portfolio</title>
-    <meta name="description" content="Derrick Eberlein's Software Engineering Portfolio">
+    <title>Tomodachi Street DMV</title>
+    <meta name="description" content="Tomodachi Street DMV Hangout and Meetup Events" />
   </head>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tagcloud/1.1.3/tagcloud.min.js"></script>
