--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
   <head>
     <link rel="apple-touch-icon" sizes="180x180" href="https://tomodachistreet.org/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://tomodachistreet.org/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://tomodachistreet.org/favicon-16x16.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomodachi Street DMV</title>
