Modifed Look of Home Page, Added Photo Albums for Gallery Page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Tomodachi Street DMV</title>
     <meta name="description" content="Tomodachi Street DMV Hangout and Meetup Events" />
   </head>
+  <!-- Bootstrap JS + Popper -->
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   <body>
     <div class="root" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
